--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ketenburhan/refine-firebase": "^0.2.0",
+    "@pankod/refine-antd": "^3.14.2",
+    "@pankod/refine-core": "^3.14.2",
+    "@pankod/refine-react-router-v6": "^3.14.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -12,15 +16,11 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.1",
+    "react-mde": "^11.1.0",
     "react-scripts": "^5.0.0",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1",
-    "@pankod/refine-core": "^3.14.2",
-    "@pankod/refine-antd": "^3.14.2",
-    "@pankod/refine-react-router-v6": "^3.14.2",
-    "@pankod/refine-simple-rest": "^3.14.2",
-    "react-markdown": "^6.0.1",
-    "react-mde": "^11.1.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "dev": "react-scripts start",
